--- a/scss/main.scss
+++ b/scss/main.scss
@@ -348,3 +348,12 @@ ul.menu-nav{
     }
 
 }
+.icon-img{
+    width: 50px;
+    height: 50px;
+    border-radius: $secondary-color 2px;
+}
+.icon-img-tiny{
+    width: 20px;
+    height: 20px;
+}
